--- a/style..css
+++ b/style..css
@@ -109,7 +109,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   min-height: 100vh;
   background-color: var(--main-bg-color);
 }
@@ -122,7 +121,8 @@ main {
   max-width: 21rem;
 
   background-color: #fff;
-  padding: 1.5rem;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.21);
+  padding: 1.2rem;
   border-radius: 12px;
 
   /*Moving main a little over top of background*/
@@ -162,13 +162,12 @@ details:not(:last-of-type)::after {
 details > summary {
   cursor: pointer;
   width: 100%;
-  height: 100%;
   font-weight: 700;
   font-size: 1.15rem;
 
   text-wrap: balance;
   margin-bottom: 1rem;
-  transition: color 150ms ease;
+  transition: color 200ms ease-in;
   /*Removing default arrow*/
   display: inline-flex;
   align-items: center;
@@ -198,19 +197,39 @@ details > p {
   opacity: 0.7;
 }
 
+footer {
+  width: 100%;
+}
 /*Footer*/
 .attribution {
-  display: flex;
-  font-size: 0.825rem;
+  font-size: 0.875rem;
+  margin: 0;
   text-align: center;
+  background-color: #fff;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+  font-weight: 600;
 }
 
+/*Extra small screens*/
+@media (min-width: 5rem) and (max-width: 23rem) {
+  main {
+    max-width: 16rem;
+  }
+}
+
+/*Tablet screens*/
+@media (min-width: 48rem) {
+  main {
+    max-width: 30rem;
+  }
+}
+
+/*Large screens*/
 @media (min-width: 70rem) {
   main {
-    max-width: 46rem;
+    max-width: 40rem;
     transform: translateY(-100px);
   }
 
